Added the swagger and cleaned the main.go
