# docs/swagger.json
@@ -1,17 +1,17 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a production-ready JWT Authentication server.",
-        "title": "Authentication API",
+        "description": "This is the Sys API server.",
+        "title": "Sys API",
         "contact": {},
         "version": "1.0"
     },
-    "host": "archon.monu14.me",
+    "host": "localhost:8080",
     "basePath": "/",
     "paths": {
         "/forgot-password": {
             "post": {
-                "description": "Initiates the password reset process by sending an OTP",
+                "description": "Request a password reset email",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,12 +19,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "auth"
                 ],
                 "summary": "Forgot password",
                 "parameters": [
                     {
-                        "description": "Forgot password payload",
+                        "description": "Forgot Password Info",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -51,7 +51,7 @@
         },
         "/login": {
             "post": {
-                "description": "Authenticates a user and returns access/refresh tokens",
+                "description": "Login with email and password",
                 "consumes": [
                     "application/json"
                 ],
@@ -59,12 +59,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "auth"
                 ],
                 "summary": "Login user",
                 "parameters": [
                     {
-                        "description": "Login payload",
+                        "description": "Login Info",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -109,7 +109,12 @@
         },
         "/logout": {
             "post": {
-                "description": "Invalidates a user's refresh token",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Logout user and invalidate refresh token",
                 "consumes": [
                     "application/json"
                 ],
@@ -117,15 +122,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "auth"
                 ],
                 "summary": "Logout user",
                 "parameters": [
                     {
-                        "description": "Logout payload",
+                        "description": "Logout Info",
                         "name": "request",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/auth.LogoutRequest"
                         }
@@ -155,7 +159,7 @@
         },
         "/refresh": {
             "post": {
-                "description": "Refreshes the JWT access token using a valid refresh token",
+                "description": "Refresh access token using refresh token",
                 "consumes": [
                     "application/json"
                 ],
@@ -163,15 +167,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "auth"
                 ],
-                "summary": "Refresh access token",
+                "summary": "Refresh token",
                 "parameters": [
                     {
-                        "description": "Refresh token payload",
+                        "description": "Refresh Token Info",
                         "name": "request",
                         "in": "body",
-                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/auth.RefreshRequest"
                         }
@@ -213,7 +216,7 @@
         },
         "/register": {
             "post": {
-                "description": "Creates a new user and sends an OTP for email verification",
+                "description": "Register a new user with name, email and password",
                 "consumes": [
                     "application/json"
                 ],
@@ -221,12 +224,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "auth"
                 ],
                 "summary": "Register a new user",
                 "parameters": [
                     {
-                        "description": "Registration payload",
+                        "description": "Registration Info",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -263,9 +266,9 @@
                 }
             }
         },
-        "/reset-password": {
+        "/resend-otp": {
             "post": {
-                "description": "Resets a user's password using an OTP",
+                "description": "Resend OTP for email verification or password reset",
                 "consumes": [
                     "application/json"
                 ],
@@ -273,12 +276,52 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "auth"
+                ],
+                "summary": "Resend OTP",
+                "parameters": [
+                    {
+                        "description": "Resend OTP Info",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.ResendOTPRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/reset-password": {
+            "post": {
+                "description": "Reset password using reset token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
                 ],
                 "summary": "Reset password",
                 "parameters": [
                     {
-                        "description": "Reset password payload",
+                        "description": "Reset Password Info",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -305,7 +348,7 @@
         },
         "/verify-email": {
             "post": {
-                "description": "Verifies a user's email using an OTP",
+                "description": "Verify email using the OTP sent to the user",
                 "consumes": [
                     "application/json"
                 ],
@@ -313,12 +356,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "auth"
                 ],
-                "summary": "Verify user email",
+                "summary": "Verify email with OTP",
                 "parameters": [
                     {
-                        "description": "Verify email payload",
+                        "description": "Verify Email Info",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -332,6 +375,58 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/verify-reset-otp": {
+            "post": {
+                "description": "Verify the OTP sent for password reset",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Verify reset password OTP",
+                "parameters": [
+                    {
+                        "description": "Verify Reset OTP Info",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.VerifyResetOTPRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/auth.VerifyResetOTPResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -422,25 +517,43 @@
                 },
                 "password": {
                     "type": "string",
+                    "maxLength": 30,
                     "minLength": 8
+                }
+            }
+        },
+        "auth.ResendOTPRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "intent"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "intent": {
+                    "type": "string",
+                    "enum": [
+                        "register",
+                        "forgot_password"
+                    ]
                 }
             }
         },
         "auth.ResetPasswordRequest": {
             "type": "object",
             "required": [
-                "email",
                 "new_password",
-                "otp"
+                "reset_token"
             ],
             "properties": {
-                "email": {
-                    "type": "string"
-                },
                 "new_password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 8
                 },
-                "otp": {
+                "reset_token": {
                     "type": "string"
                 }
             }
@@ -470,6 +583,29 @@
                 }
             }
         },
+        "auth.VerifyResetOTPRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "otp"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "otp": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.VerifyResetOTPResponse": {
+            "type": "object",
+            "properties": {
+                "reset_token": {
+                    "type": "string"
+                }
+            }
+        },
         "response.APIResponse": {
             "type": "object",
             "properties": {
@@ -484,6 +620,13 @@
                     "type": "boolean"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
