# internal/server/server.go
@@ -1,0 +1,65 @@
+package server
+
+import (
+	"log"
+	"os"
+	"strings"
+
+	"github.com/MonuChaudhary14/sys/internal/auth"
+	"github.com/MonuChaudhary14/sys/internal/cache"
+	"github.com/MonuChaudhary14/sys/internal/database"
+
+	"github.com/gin-contrib/cors"
+	"github.com/gin-gonic/gin"
+
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
+)
+
+type Server struct {
+	router *gin.Engine
+}
+
+func NewServer() (*Server, error) {
+	db, err := database.NewPostgresPool(os.Getenv("DATABASE_URL"))
+	if err != nil {
+		return nil, err
+	}
+
+	redisClient := cache.NewRedisClient()
+	if err := cache.Ping(redisClient); err != nil {
+		return nil, err
+	}
+
+	log.Println("PostgreSQL Connected")
+	log.Println("Redis Connected")
+
+	router := gin.Default()
+
+	allowedOrigins := os.Getenv("FRONTEND_URL")
+	if allowedOrigins == "" {
+		allowedOrigins = "http://localhost:3000"
+	}
+
+	corsConfig := cors.DefaultConfig()
+	corsConfig.AllowOrigins = strings.Split(allowedOrigins, ",")
+	corsConfig.AllowMethods = []string{"GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"}
+	corsConfig.AllowHeaders = []string{"Origin", "Content-Length", "Content-Type", "Authorization"}
+	corsConfig.AllowCredentials = true
+	router.Use(cors.New(corsConfig))
+
+	// Setup modular routing
+	authGroup := router.Group("/")
+	auth.Setup(db, redisClient, authGroup)
+
+	// Swagger setup
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	return &Server{
+		router: router,
+	}, nil
+}
+
+func (s *Server) Run(addr string) error {
+	return s.router.Run(addr)
+}
